fix: sonarcube, vm transfert, github login